test/cherry/Language/same_scope_redefinition_error.cherry
# RUN: not cherry-driver -typecheck %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  var value: UInt64 = 1;
  var value: UInt64 = 2;
  value
}

# CHECK: error: redefinition of variable
